Major pipeline tweaks & fixes, Update license
Fixes #28
Also refactored most of the PrecomputedConfig, fixed the config versioning, and some other things.